crates/frontend/src/parser.rs
//! The recursive-descent parser: a token stream → [`ast::Program`].
//!
//! Covers `spec/grammar.ebnf` Part S: `pull`, the top-level declarations (`finna`, `drip`,
//! `moods`, `crib`, `facts`, `lowkey`, `extern`), the full statement set, the §E1 expression
//! precedence ladder (note the Go rule — bitwise `& ^ |` bind tighter than the comparisons),
//! and the §S3 type grammar. Statement boundaries are the `Semi` tokens produced by the
//! lexer's ASI pass; the parser is lenient about runs of them.

use crate::ast::*;
use crate::lexer::{Spanned, Token};

/// Parse a token stream into a [`Program`], or report the first syntax error.
pub fn parse(tokens: &[Spanned]) -> Result<Program, String> {
    let eof = tokens.last().map(|s| s.span.end).unwrap_or(0);
    let mut p = Parser {
        toks: tokens,
        pos: 0,
        eof,
        no_struct: false,
    };
    p.program()
}

struct Parser<'a> {
    toks: &'a [Spanned],
    pos: usize,
    eof: u32,
    /// When set, `Name {` is NOT parsed as a struct literal (the `{` starts a block). Applies
    /// only at the top level of an `fr`/`vibin`/`squad`/`vibe`/`holla` header (§L6 rule 3);
    /// any nested `(...)`/`[...]`/`{...}` re-enables struct literals.
    no_struct: bool,
}

type PResult<T> = Result<T, String>;

impl<'a> Parser<'a> {
    // --- cursor primitives ---

    fn peek(&self) -> Option<&Token> {
        self.toks.get(self.pos).map(|s| &s.tok)
    }

    fn peek2(&self) -> Option<&Token> {
        self.toks.get(self.pos + 1).map(|s| &s.tok)
    }

    fn check(&self, t: &Token) -> bool {
        self.peek() == Some(t)
    }

    /// Byte offset where the current token starts (or EOF).
    fn lo(&self) -> u32 {
        self.toks
            .get(self.pos)
            .map(|s| s.span.start)
            .unwrap_or(self.eof)
    }

    /// Byte offset where the previously consumed token ended.
    fn hi(&self) -> u32 {
        if self.pos == 0 {
            0
        } else {
            self.toks[self.pos - 1].span.end
        }
    }

    fn span_from(&self, lo: u32) -> Span {
        Span::new(lo, self.hi())
    }

    fn eat(&mut self, t: &Token) -> bool {
        if self.check(t) {
            self.pos += 1;
            true
        } else {
            false
        }
    }

    fn expect(&mut self, t: &Token) -> PResult<()> {
        if self.eat(t) {
            Ok(())
        } else {
            Err(format!("expected {:?}, found {:?}", t, self.peek()))
        }
    }

    fn ident(&mut self) -> PResult<String> {
        match self.toks.get(self.pos).map(|s| &s.tok) {
            Some(Token::Ident(s)) => {
                let s = s.clone();
                self.pos += 1;
                Ok(s)
            }
            other => Err(format!("expected identifier, found {other:?}")),
        }
    }

    /// Consume any run of statement terminators (`Semi`).
    fn skip_semis(&mut self) {
        while self.check(&Token::Semi) {
            self.pos += 1;
        }
    }

    // --- program & top-level ------------------------------------------------

    fn program(&mut self) -> PResult<Program> {
        let mut items = Vec::new();
        loop {
            self.skip_semis();
            if self.peek().is_none() {
                break;
            }
            items.push(self.top_item()?);
        }
        Ok(Program { items })
    }

    fn top_item(&mut self) -> PResult<Item> {
        if self.check(&Token::Pull) {
            return Ok(Item::Pull(self.pull()?));
        }
        if self.check(&Token::Extern) {
            return Ok(Item::Extern(self.extern_decl()?));
        }
        let vis = if self.eat(&Token::Flex) {
            Vis::Flex
        } else {
            Vis::Hush
        };
        match self.peek() {
            Some(Token::Finna) => Ok(Item::Func(self.fn_decl(vis)?)),
            Some(Token::Drip) => Ok(Item::Drip(self.drip_decl(vis)?)),
            Some(Token::Moods) => Ok(Item::Moods(self.moods_decl(vis)?)),
            Some(Token::Crib) => Ok(Item::Crib(self.crib_decl(vis)?)),
            Some(Token::Facts) => Ok(Item::Const(self.const_decl(vis)?)),
            Some(Token::Lowkey) => Ok(Item::Var(self.var_decl(vis)?)),
            other => Err(format!("unexpected top-level token {other:?}")),
        }
    }

    fn pull(&mut self) -> PResult<Pull> {
        let lo = self.lo();
        self.expect(&Token::Pull)?;
        let module = self.str_lit()?;
        Ok(Pull {
            module,
            span: self.span_from(lo),
        })
    }

    fn extern_decl(&mut self) -> PResult<ExternDecl> {
        let lo = self.lo();
        self.expect(&Token::Extern)?;
        let abi = self.str_lit()?;
        self.expect(&Token::Finna)?;
        let name = self.ident()?;
        let params = self.param_list()?;
        let ret = self.opt_ret_single()?;
        Ok(ExternDecl {
            abi,
            name,
            params,
            ret,
            span: self.span_from(lo),
        })
    }

    fn fn_decl(&mut self, vis: Vis) -> PResult<FnDecl> {
        let lo = self.lo();
        self.expect(&Token::Finna)?;
        let receiver = if self.check(&Token::LParen) {
            Some(self.receiver()?)
        } else {
            None
        };
        let name = self.ident()?;
        let generics = self.generic_params()?;
        let params = self.param_list()?;
        let ret = self.opt_ret()?;
        let body = self.block()?;
        Ok(FnDecl {
            vis,
            receiver,
            name,
            generics,
            params,
            ret,
            body,
            span: self.span_from(lo),
        })
    }

    fn receiver(&mut self) -> PResult<Receiver> {
        let lo = self.lo();
        self.expect(&Token::LParen)?;
        let name = self.ident()?;
        self.expect(&Token::Colon)?;
        let ty = self.parse_type()?;
        self.expect(&Token::RParen)?;
        Ok(Receiver {
            name,
            ty,
            span: self.span_from(lo),
        })
    }

    /// `[ "[" ident { "," ident } "]" ]` — a generic parameter list.
    fn generic_params(&mut self) -> PResult<Vec<String>> {
        let mut out = Vec::new();
        if self.eat(&Token::LBracket) {
            out.push(self.ident()?);
            while self.eat(&Token::Comma) {
                out.push(self.ident()?);
            }
            self.expect(&Token::RBracket)?;
        }
        Ok(out)
    }

    fn param_list(&mut self) -> PResult<Vec<Param>> {
        self.expect(&Token::LParen)?;
        let mut params = Vec::new();
        if !self.check(&Token::RParen) {
            params.push(self.param()?);
            while self.eat(&Token::Comma) {
                params.push(self.param()?);
            }
        }
        self.expect(&Token::RParen)?;
        Ok(params)
    }

    fn param(&mut self) -> PResult<Param> {
        let lo = self.lo();
        let name = self.ident()?;
        self.expect(&Token::Colon)?;
        let ty = self.parse_type()?;
        Ok(Param {
            name,
            ty,
            span: self.span_from(lo),
        })
    }

    /// `[ "->" retType ]` — a full return (single or parenthesized multi-value).
    fn opt_ret(&mut self) -> PResult<RetType> {
        if !self.eat(&Token::Arrow) {
            return Ok(RetType::None);
        }
        if self.eat(&Token::LParen) {
            let mut tys = vec![self.parse_type()?];
            while self.eat(&Token::Comma) {
                tys.push(self.parse_type()?);
            }
            self.expect(&Token::RParen)?;
            Ok(RetType::Multi(tys))
        } else {
            Ok(RetType::Single(self.parse_type()?))
        }
    }

    /// `[ "->" type ]` — an extern's single return.
    fn opt_ret_single(&mut self) -> PResult<RetType> {
        if self.eat(&Token::Arrow) {
            Ok(RetType::Single(self.parse_type()?))
        } else {
            Ok(RetType::None)
        }
    }

    fn drip_decl(&mut self, vis: Vis) -> PResult<DripDecl> {
        let lo = self.lo();
        self.expect(&Token::Drip)?;
        let name = self.ident()?;
        let generics = self.generic_params()?;
        self.expect(&Token::LBrace)?;
        let mut fields = Vec::new();
        loop {
            self.skip_semis();
            if self.check(&Token::RBrace) || self.peek().is_none() {
                break;
            }
            fields.push(self.field_decl()?);
            self.skip_semis();
            self.eat(&Token::Comma);
        }
        self.expect(&Token::RBrace)?;
        Ok(DripDecl {
            vis,
            name,
            generics,
            fields,
            span: self.span_from(lo),
        })
    }

    fn field_decl(&mut self) -> PResult<FieldDecl> {
        let lo = self.lo();
        let vis = if self.eat(&Token::Flex) {
            Some(Vis::Flex)
        } else if self.eat(&Token::Hush) {
            Some(Vis::Hush)
        } else {
            None
        };
        let name = self.ident()?;
        self.expect(&Token::Colon)?;
        let ty = self.parse_type()?;
        Ok(FieldDecl {
            vis,
            name,
            ty,
            span: self.span_from(lo),
        })
    }

    fn moods_decl(&mut self, vis: Vis) -> PResult<MoodsDecl> {
        let lo = self.lo();
        self.expect(&Token::Moods)?;
        let name = self.ident()?;
        let generics = self.generic_params()?;
        self.expect(&Token::LBrace)?;
        let mut variants = Vec::new();
        loop {
            self.skip_semis();
            if self.check(&Token::RBrace) || self.peek().is_none() {
                break;
            }
            variants.push(self.variant()?);
            self.skip_semis();
            self.eat(&Token::Comma);
        }
        self.expect(&Token::RBrace)?;
        Ok(MoodsDecl {
            vis,
            name,
            generics,
            variants,
            span: self.span_from(lo),
        })
    }

    fn variant(&mut self) -> PResult<Variant> {
        let lo = self.lo();
        let name = self.ident()?;
        let mut payload = Vec::new();
        if self.eat(&Token::LParen) {
            payload.push(self.parse_type()?);
            while self.eat(&Token::Comma) {
                payload.push(self.parse_type()?);
            }
            self.expect(&Token::RParen)?;
        }
        Ok(Variant {
            name,
            payload,
            span: self.span_from(lo),
        })
    }

    fn crib_decl(&mut self, vis: Vis) -> PResult<CribDecl> {
        let lo = self.lo();
        self.expect(&Token::Crib)?;
        let name = self.ident()?;
        let ty = if self.eat(&Token::Colon) {
            Some(self.parse_type()?)
        } else {
            None
        };
        Ok(CribDecl {
            vis,
            name,
            ty,
            span: self.span_from(lo),
        })
    }

    fn const_decl(&mut self, vis: Vis) -> PResult<ConstDecl> {
        let lo = self.lo();
        self.expect(&Token::Facts)?;
        let name = self.ident()?;
        let ty = if self.eat(&Token::Colon) {
            Some(self.parse_type()?)
        } else {
            None
        };
        self.expect(&Token::Eq)?;
        let value = self.expr()?;
        Ok(ConstDecl {
            vis,
            name,
            ty,
            value,
            span: self.span_from(lo),
        })
    }

    fn var_decl(&mut self, vis: Vis) -> PResult<VarDecl> {
        let lo = self.lo();
        self.expect(&Token::Lowkey)?;
        let mut targets = vec![self.ident()?];
        while self.eat(&Token::Comma) {
            targets.push(self.ident()?);
        }
        let ty = if self.eat(&Token::Colon) {
            Some(self.parse_type()?)
        } else {
            None
        };
        self.expect(&Token::Eq)?;
        let values = self.expr_list()?;
        Ok(VarDecl {
            vis,
            targets,
            ty,
            values,
            span: self.span_from(lo),
        })
    }

    // --- types --------------------------------------------------------------

    fn parse_type(&mut self) -> PResult<Type> {
        let lo = self.lo();
        // `[]T` — slice.
        if self.check(&Token::LBracket) {
            self.pos += 1;
            self.expect(&Token::RBracket)?;
            let inner = self.parse_type()?;
            return Ok(Type {
                kind: TypeKind::Slice(Box::new(inner)),
                span: self.span_from(lo),
            });
        }
        if self.eat(&Token::Tag) {
            let inner = self.parse_type()?;
            return Ok(Type {
                kind: TypeKind::Tag(Box::new(inner)),
                span: self.span_from(lo),
            });
        }
        if self.eat(&Token::Crib) {
            let inner = self.parse_type()?;
            return Ok(Type {
                kind: TypeKind::Crib(Box::new(inner)),
                span: self.span_from(lo),
            });
        }
        if self.eat(&Token::Finna) {
            // `finna ( typeList? ) -> type`.
            self.expect(&Token::LParen)?;
            let mut params = Vec::new();
            if !self.check(&Token::RParen) {
                params.push(self.parse_type()?);
                while self.eat(&Token::Comma) {
                    params.push(self.parse_type()?);
                }
            }
            self.expect(&Token::RParen)?;
            self.expect(&Token::Arrow)?;
            let ret = self.parse_type()?;
            return Ok(Type {
                kind: TypeKind::Fn(params, Box::new(ret)),
                span: self.span_from(lo),
            });
        }
        // A named type (`int`, `stash[str, i64]`, `Enemy`) or `rawptr`.
        let name = self.ident()?;
        let mut ty = if name == "rawptr" {
            Type {
                kind: TypeKind::RawPtr,
                span: self.span_from(lo),
            }
        } else {
            let mut generics = Vec::new();
            // `[` starting a generic arg list (not a fixed-array size, which is `[intLit]`).
            if self.check(&Token::LBracket) && !self.next_is_int() {
                self.pos += 1;
                generics.push(self.parse_type()?);
                while self.eat(&Token::Comma) {
                    generics.push(self.parse_type()?);
                }
                self.expect(&Token::RBracket)?;
            }
            Type {
                kind: TypeKind::Named(name, generics),
                span: self.span_from(lo),
            }
        };
        // Trailing fixed-array dimensions: `Enemy[1000]`.
        while self.check(&Token::LBracket) && self.next_is_int() {
            self.pos += 1;
            let size = self.int_lit()? as u64;
            self.expect(&Token::RBracket)?;
            ty = Type {
                kind: TypeKind::Array(Box::new(ty), size),
                span: self.span_from(lo),
            };
        }
        Ok(ty)
    }

    fn next_is_int(&self) -> bool {
        matches!(self.peek2(), Some(Token::Int(_)))
    }

    // --- blocks & statements ------------------------------------------------

    fn block(&mut self) -> PResult<Block> {
        let lo = self.lo();
        self.expect(&Token::LBrace)?;
        let mut stmts = Vec::new();
        loop {
            self.skip_semis();
            if self.check(&Token::RBrace) || self.peek().is_none() {
                break;
            }
            stmts.push(self.stmt()?);
        }
        self.expect(&Token::RBrace)?;
        Ok(Block {
            stmts,
            span: self.span_from(lo),
        })
    }

    fn stmt(&mut self) -> PResult<Stmt> {
        let lo = self.lo();
        let kind = match self.peek() {
            Some(Token::Lowkey) => StmtKind::Var(self.var_decl(Vis::Hush)?),
            Some(Token::Facts) => StmtKind::Const(self.const_decl(Vis::Hush)?),
            Some(Token::Crib) => StmtKind::Crib(self.crib_decl(Vis::Hush)?),
            Some(Token::Fr) => self.fr_stmt()?,
            Some(Token::Vibin) => self.vibin_stmt()?,
            Some(Token::Squad) => self.squad_stmt()?,
            Some(Token::Vibe) => self.vibe_stmt()?,
            Some(Token::Holla) => self.holla_stmt()?,
            Some(Token::Sheesh) => self.sheesh_stmt()?,
            Some(Token::Evict) => {
                self.pos += 1;
                StmtKind::Evict(self.expr()?)
            }
            Some(Token::Slide) => {
                self.pos += 1;
                StmtKind::Slide(self.expr()?)
            }
            Some(Token::Bet) => {
                self.pos += 1;
                let values = if self.stmt_ends() {
                    Vec::new()
                } else {
                    self.expr_list()?
                };
                StmtKind::Bet(values)
            }
            Some(Token::Bounce) => {
                self.pos += 1;
                StmtKind::Bounce(self.expr()?)
            }
            Some(Token::Yeet) => {
                self.pos += 1;
                self.expect(&Token::LParen)?;
                let e = self.expr()?;
                self.expect(&Token::RParen)?;
                StmtKind::Yeet(e)
            }
            Some(Token::Dip) => {
                self.pos += 1;
                StmtKind::Dip
            }
            Some(Token::Skip) => {
                self.pos += 1;
                StmtKind::Skip
            }
            _ => self.expr_or_assign()?,
        };
        Ok(Stmt {
            kind,
            span: self.span_from(lo),
        })
    }

    /// True when the current position is a natural end of statement (terminator / `}` / EOF).
    fn stmt_ends(&self) -> bool {
        matches!(self.peek(), None | Some(Token::Semi) | Some(Token::RBrace))
    }

    fn fr_stmt(&mut self) -> PResult<StmtKind> {
        self.expect(&Token::Fr)?;
        let cond = self.expr_header()?;
        let then = self.block()?;
        let mut elifs = Vec::new();
        let mut els = None;
        while self.eat(&Token::Naw) {
            if self.eat(&Token::Fr) {
                let c = self.expr_header()?;
                let b = self.block()?;
                elifs.push((c, b));
            } else {
                els = Some(self.block()?);
                break;
            }
        }
        Ok(StmtKind::Fr(FrStmt {
            cond,
            then,
            elifs,
            els,
        }))
    }

    fn vibin_stmt(&mut self) -> PResult<StmtKind> {
        self.expect(&Token::Vibin)?;
        let cond = self.expr_header()?;
        let body = self.block()?;
        Ok(StmtKind::Vibin { cond, body })
    }

    fn squad_stmt(&mut self) -> PResult<StmtKind> {
        self.expect(&Token::Squad)?;
        let var = self.ident()?;
        self.expect(&Token::In)?;
        let iter = self.expr_header()?;
        let body = self.block()?;
        Ok(StmtKind::Squad { var, iter, body })
    }

    fn vibe_stmt(&mut self) -> PResult<StmtKind> {
        self.expect(&Token::Vibe)?;
        let scrutinee = self.expr_header()?;
        self.expect(&Token::LBrace)?;
        let mut arms = Vec::new();
        let mut default = None;
        loop {
            self.skip_semis();
            if self.check(&Token::RBrace) || self.peek().is_none() {
                break;
            }
            if self.eat(&Token::Naw) {
                default = Some(self.block()?);
                self.skip_semis();
                break;
            }
            arms.push(self.match_arm()?);
        }
        self.expect(&Token::RBrace)?;
        Ok(StmtKind::Vibe {
            scrutinee,
            arms,
            default,
        })
    }

    fn match_arm(&mut self) -> PResult<MatchArm> {
        let lo = self.lo();
        let variant = self.ident()?;
        let mut bindings = Vec::new();
        if self.eat(&Token::LParen) {
            bindings.push(self.ident()?);
            while self.eat(&Token::Comma) {
                bindings.push(self.ident()?);
            }
            self.expect(&Token::RParen)?;
        }
        let body = self.block()?;
        Ok(MatchArm {
            variant,
            bindings,
            body,
            span: self.span_from(lo),
        })
    }

    fn holla_stmt(&mut self) -> PResult<StmtKind> {
        self.expect(&Token::Holla)?;
        let binding = self.ident()?;
        self.expect(&Token::Eq)?;
        let tag = self.expr()?;
        self.expect(&Token::In)?;
        let crib = self.expr_header()?;
        let live = self.block()?;
        self.expect(&Token::Ghosted)?;
        let ghosted = self.block()?;
        Ok(StmtKind::Holla {
            binding,
            tag,
            crib,
            live,
            ghosted,
        })
    }

    fn sheesh_stmt(&mut self) -> PResult<StmtKind> {
        self.expect(&Token::Sheesh)?;
        let body = self.block()?;
        let recover = if self.eat(&Token::Naw) {
            let name = self.ident()?;
            let b = self.block()?;
            Some((name, b))
        } else {
            None
        };
        Ok(StmtKind::Sheesh { body, recover })
    }

    /// An expression statement, or an assignment (`lvalue, ... op exprList`).
    fn expr_or_assign(&mut self) -> PResult<StmtKind> {
        let first = self.expr()?;
        if self.check(&Token::Comma) || self.assign_op().is_some() {
            let mut targets = vec![first];
            while self.eat(&Token::Comma) {
                targets.push(self.expr()?);
            }
            let op = self.assign_op().ok_or_else(|| {
                format!("expected an assignment operator, found {:?}", self.peek())
            })?;
            self.pos += 1;
            let values = self.expr_list()?;
            Ok(StmtKind::Assign {
                targets,
                op,
                values,
            })
        } else {
            Ok(StmtKind::Expr(first))
        }
    }

    fn assign_op(&self) -> Option<AssignOp> {
        Some(match self.peek()? {
            Token::Eq => AssignOp::Eq,
            Token::PlusEq => AssignOp::AddEq,
            Token::MinusEq => AssignOp::SubEq,
            Token::StarEq => AssignOp::MulEq,
            Token::SlashEq => AssignOp::DivEq,
            Token::PercentEq => AssignOp::RemEq,
            Token::AmpEq => AssignOp::AndEq,
            Token::PipeEq => AssignOp::OrEq,
            Token::CaretEq => AssignOp::XorEq,
            Token::ShlEq => AssignOp::ShlEq,
            Token::ShrEq => AssignOp::ShrEq,
            _ => return None,
        })
    }

    // --- expressions (§E1 precedence ladder) --------------------------------

    /// Parse a header expression (`fr`/`vibin`/`squad`/`vibe`/`holla`-crib), with
    /// unparenthesized struct literals disabled so a trailing `{` reads as a block.
    fn expr_header(&mut self) -> PResult<Expr> {
        let saved = self.no_struct;
        self.no_struct = true;
        let e = self.expr();
        self.no_struct = saved;
        e
    }
